Add link and info about new Spreadshirt shop

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ hide: true
       </p>
 
       <p>
-        Seit Oktober 2020 habe ich außerdem einen eigenen Etsy Shop, in dem ich
-        Postkarten mit meiner Buchstabenkunst anbiete.
+        Seit Oktober 2020 habe ich einen Etsy Shop, in dem ich
+        Postkarten mit meiner Buchstabenkunst vertreibe.
       </p>
 
       <p>
@@ -70,8 +70,22 @@ hide: true
       </p>
 
       <p>
+        Meine Buchstabenkunst bekommst du außerdem auch auf T-Shirts und Co.
+      </p>
+
+      <p>
+        <a class="button" href="{{ site.data.links.spreadshirt }}" target="_blank">
+          <i class="fa fa-shopping-cart fa-fw"></i> Besuche meinen Spreadshirt Shop
+        </a>
+      </p>
+
+      <p>
+        {% include aligner.html images="/spreadshirt/spreadshop_shirts.jpg" column=1 link="https://shop.spreadshirt.de/fraulyoner/done+is+better+than+perfect?idea=6038e002bcf9c901a5e7fa19" %}
+      </p>
+
+      <p>
         Übrigens bin ich auch als Künstlerin bei artboxONE vertreten. Dort
-        kannst du einige meiner Motive als Kunstdruck erwerben.
+        kannst du meine Motive als Kunstdruck erwerben.
       </p>
 
       <p>
