--- a/links.html
+++ b/links.html
@@ -15,7 +15,13 @@ hide: true
     <h3>Frau Lyoner</h3>
     <p>
       <a class="button" target="_blank" href="{{ site.data.links.etsy }}">
-        Mein Online Shop bei Etsy
+        Meine Postkarten bei Etsy
+      </a>
+      <a class="button" target="_blank" href="{{ site.data.links.spreadshirt }}">
+        Meine Motive auf T-Shirts
+      </a>
+      <a class="button" target="_blank" href="{{ site.data.links.artboxone }}">
+        Meine Motive als Kunstdruck
       </a>
       <a class="button" href="{{ site.data.links.gedankenshift }}">
         Mein Blog gedankenshift.de
