Link images of other products

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/etsy/aufgeraeumt.jpg,/etsy/zeitstattzeug.jpg" column=2 %}
+        {% include aligner.html images="/etsy/aufgeraeumt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="https://www.etsy.com/de/shop/fraulyonerDE" %}
       </p>
 
       <p>
@@ -95,7 +95,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/artboxone/01_simple.jpg,/artboxone/02_kaffee.jpg,/artboxone/03_danken.jpg" column=3 %}
+        {% include aligner.html images="/artboxone/01_simple.jpg,/artboxone/02_kaffee.jpg,/artboxone/03_danken.jpg" column=3 link="https://www.artboxone.de/wandbilder/poster-im-kunststoffrahmen/frau-lyoner/bestseller" %}
       </p>
     </section>
 
@@ -116,7 +116,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/gedankenshift/01_glaube_nicht_alles.jpg,/gedankenshift/02_dankbarkeitstagebuch.jpg" column=2 %}
+        {% include aligner.html images="/gedankenshift/01_glaube_nicht_alles.jpg,/gedankenshift/02_dankbarkeitstagebuch.jpg" column=2 link="https://www.gedankenshift.de/" %}
       </p>
     </section>
 
