index.html: Update images and icons used in buttons

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@ hide: true
       </p>
 
       <p>
-        Seit Oktober 2020 habe ich einen Etsy Shop, in dem ich
-        Postkarten mit meiner Buchstabenkunst vertreibe.
+        Seit Oktober 2020 habe ich einen
+        <a href="{{ site.data.links.etsy }}" target="_blank">Etsy Shop</a>,
+        in dem ich Postkarten mit meiner Buchstabenkunst vertreibe.
       </p>
 
       <p>
@@ -66,16 +67,16 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/etsy/aufgeraeumt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="https://www.etsy.com/de/shop/fraulyonerDE" %}
+        {% include aligner.html images="/etsy/schoendassesdichgibt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="https://www.etsy.com/de/shop/fraulyonerDE" %}
       </p>
 
       <p>
-        Meine Buchstabenkunst bekommst du außerdem auch auf T-Shirts und Co.
+        Meine Buchstabenkunst bekommst du außerdem auch auf T-Shirts.
       </p>
 
       <p>
         <a class="button" href="{{ site.data.links.spreadshirt }}" target="_blank">
-          <i class="fa fa-shopping-cart fa-fw"></i> Besuche meinen Spreadshirt Shop
+          <i class="fa fa-shopping-basket fa-fw"></i> Besuche meinen Spreadshirt Shop
         </a>
       </p>
 
@@ -90,7 +91,7 @@ hide: true
 
       <p>
         <a class="button" href="{{ site.data.links.artboxone }}" target="_blank">
-          <i class="fa fa-shopping-cart fa-fw"></i> Entdecke meine Motive bei artboxONE
+          <i class="fa fa-image fa-fw"></i> Entdecke meine Motive bei artboxONE
         </a>
       </p>
 
@@ -111,12 +112,12 @@ hide: true
 
       <p>
         <a class="button" target="_blank" href="{{ site.data.links.gedankenshift }}">
-          <i class="fa fa-lg fa-fw fa-sign-in"></i> Mein Blog gedankenshift.de
+          <i class="fa fa-fw fa-random"></i> Mein Blog gedankenshift.de
         </a>
       </p>
 
       <p>
-        {% include aligner.html images="/gedankenshift/01_glaube_nicht_alles.jpg,/gedankenshift/02_dankbarkeitstagebuch.jpg" column=2 link="https://www.gedankenshift.de/" %}
+        {% include aligner.html images="/gedankenshift/glaube_nicht_alles_was_du_denkst.jpg,/gedankenshift/happy_healthy.jpg" column=2 link="https://www.gedankenshift.de/" %}
       </p>
     </section>
 
