index.html: Introduce new section about local shops with my cards
* Add new page "Meine Postkarten in Karlsruhe"

--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@ hide: true
       </p>
 
       <p>
+        Wenn du aus Karlsruhe und Umgebung kommst, findest du meine Postkarten
+        übrigens auch in einigen lokalen Geschäften.
+      </p>
+
+      <p>
+        <a class="button" href="{{ '/postkarten-in-karlsruhe/' | relative_url }}" target="_blank">
+          <i class="fa fa-map-marker fa-fw"></i> Entdecke meine Postkarten in Karlsruhe
+        </a>
+      </p>
+
+      <p>
+        {% include aligner.html images="/lokal/postkarten_tantem.jpg,/lokal/weihnachtskarten_tantem.jpg" column=2 link="https://www.etsy.com/de/shop/fraulyonerDE" %}
+      </p>
+
+      <p>
         Meine Buchstabenkunst bekommst du außerdem auch auf T-Shirts.
       </p>
 
