index.html: Fix _blank target for on-page-link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ hide: true
       </p>
 
       <p>
-        <a class="button" href="{{ '/postkarten-in-karlsruhe/' | relative_url }}" target="_blank">
+        <a class="button" href="{{ '/postkarten-in-karlsruhe/' | relative_url }}">
           <i class="fa fa-map-marker fa-fw"></i> Entdecke meine Postkarten in Karlsruhe
         </a>
       </p>
