--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ hide: true
       <h2>Denkanstöße & Anregungen</h2>
 
       <p>
-        Ob Anregungen für Perspektivenwechsel, Denkanstöße für mehr
-        Zufriedenheit oder Tipps, um Ballast loszulassen  – auf meinem Blog
+        Ob Anregungen für mehr Gelassenheit und Selbstfürsorge im Alltag oder
+        Tipps zu Minimalismus und Digital Detox – auf meinem Blog
         <a target="_blank" href="{{ site.data.links.gedankenshift }}">gedankenshift.de</a>
         dreht sich alles rund um's Umdenken, Loslassen, Wohlfühlen.
       </p>
