content: remove everything around Etsy

--- a/index.html
+++ b/index.html
@@ -56,24 +56,7 @@ hide: true
       </p>
 
       <p>
-        Seit Oktober 2020 habe ich einen
-        <a href="{{ site.data.links.etsy }}" target="_blank">Etsy Shop</a>,
-        in dem ich Postkarten mit meiner Buchstabenkunst vertreibe.
-      </p>
-
-      <p>
-        <a class="button" href="{{ site.data.links.etsy }}" target="_blank">
-          <i class="fa fa-shopping-cart fa-fw"></i> Besuche meinen Etsy Shop
-        </a>
-      </p>
-
-      <p>
-        {% include aligner.html images="/etsy/schoendassesdichgibt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="https://www.etsy.com/de/shop/fraulyonerDE" %}
-      </p>
-
-      <p>
-        Wenn du aus Karlsruhe und Umgebung kommst, findest du meine Postkarten
-        übrigens auch in einigen lokalen Geschäften.
+        Wenn du aus Karlsruhe und Umgebung kommst, findest du in einigen lokalen Geschäften Postkarten von mir.
       </p>
 
       <p>
@@ -83,7 +66,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/lokal/postkarten_tantem.jpg,/lokal/weihnachtskarten_tantem.jpg" column=2 link="https://www.etsy.com/de/shop/fraulyonerDE" %}
+        {% include aligner.html images="/etsy/schoendassesdichgibt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="{{ '/postkarten-in-karlsruhe/' | relative_url }}" %}
       </p>
 
       <p>
