content: minor text shortening in index.html

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@ hide: true
         Mit Hand und Herz zaubere ich einzigartige Buchstabenkunst.
         Seit 2016 schlägt mein Herz für diese Kunstform, auch bekannt als
         <a href="{{ '/handlettering/' | relative_url }}">Handlettering</a>.
-        Ich lebe und liebe die Devise
-        <a href="{{ '/handlettering-fortschritt/' | relative_url }}">»Übung ist alles«</a>
-        und versuche mich daher auch immer wieder an
+        Hin und wieder versuche ich mich aber auch an
         <a href="{{ '/sketchnotes/' | relative_url }}">Sketchnotes</a>.
       </p>
 
