fix: fix various broken links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ hide: true
       </p>
 
       <p>
-        {% include aligner.html images="/etsy/schoendassesdichgibt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="{{ '/postkarten-in-karlsruhe/' | relative_url }}" %}
+        {% include aligner.html images="/etsy/schoendassesdichgibt.jpg,/etsy/zeitstattzeug.jpg" column=2 link="/postkarten-in-karlsruhe/" %}
       </p>
 
       <p>
